<resources>
    <string name="app_name">MobileEstimate</string>
    <string name="app_name_long">Project Cost Management Application</string>
    <string name="app_version_tag_name">Achelois</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="search_hint">Search a Project</string>
    <string name="title_activity_guided_project_creation">Create Project</string>
    <string name="action_list_creation">List Creation</string>
    <string name="cancel_project_creation">Do you really want to quit the creation Process? All changes will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save_project">Save Project</string>
    <string name="NewProjectIntentValueParam" translatable="false">NEWPROJECT</string>
    <string name="title_activity_function_point_project">Function Point Activity</string>
    <string name="title_activity_function_point_project_activtiy">Function Point Project</string>
    <string name="action_person_days_overview">Person Days Overview</string>
    <string name="action_terminate_project">Terminate Project</string>
    <string name="action_project_properties">Project Properties</string>
    <string name="project_created_text_part">"Created: "</string>
    <string name="factor_value_standard_value" translatable="false">0</string>
    <string name="function_point_influence_factor_item_integration">Integration into other applications</string>
    <string name="function_point_influence_factor_item_local_data">Local Data Processing</string>
    <string name="function_point_influence_factor_item_transaction_rate">Transaction Rate</string>
    <string name="function_point_influence_factor_item_arithmetic_operation">Arithmetic Operation</string>
    <string name="function_point_influence_factor_item_control_procedure">Control Procedure</string>
    <string name="function_point_influence_factor_item_exception_regulation">Exception Regulation</string>
    <string name="function_point_influence_factor_item_logic">Logic</string>
    <string name="function_point_influence_factor_item_processing_logic">Processing Logic</string>
    <string name="function_point_influence_factor_item_reusability">Reusability</string>
    <string name="function_point_influence_factor_item_stock_conversion">Stock Conversion</string>
    <string name="function_point_influence_factor_item_adaptability">Adaptability</string>
    <string name="project_hashmap_item_influencing_factors" translatable="false">INFLUENCINGFACTORS</string>
    <string name="project_hashmap_item_properties" translatable="false">PROPERTIES</string>
    <string name="project_hashmap_item_title" translatable="false">TITLE</string>
    <string name="project_hashmap_item_image" translatable="false">IMAGE</string>
    <string name="project_hashmap_item_iconname" translatable="false">ICONNAME</string>
    <string name="project_hashmap_item_creation_date" translatable="false">CREATIONDATE</string>
    <string name="project_hashmap_item_description" translatable="false">PROJECTDESCRIPTION</string>
    <string name="project_hashmap_item_estimation_technique" translatable="false">ESTIMATIONTECHNIQUE</string>
    <string name="PROJECT_VIEW_CODE" translatable="false">1001</string>
    <string name="CREATE_NEW_PROJECT_REQUEST_CODE" translatable="false">1002</string>
    <string name="msg_guided_project_creation_no_estimation_technique">You have chosen no Estimation Technique.</string>
    <string name="msg_guided_project_creation_chosen_estimation_technique">You have chosen the %s Estimation Technique.</string>
    <string name="error_this_should_not_happen">THIS SHOULD NOT HAPPEN!</string>
    <string name="function_point_estimation_input_data">Input Data</string>
    <string name="function_point_estimation_requests">"Requests "</string>
    <string name="function_point_estimation_output">Output</string>
    <string name="function_point_estimation_dataset">Dataset</string>
    <string name="function_point_estimation_reference_data">Reference Data</string>
    <string name="project_information">Project Information</string>
    <string name="project_analysis">Analysis</string>
    <string name="my_projects">My Projects</string>
    <string name="influencing_factors">Influencing Factors</string>
    <string name="export">Export</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="influence_factor_sample_name">Integration into other applications</string>
    <string name="influence_factor_sample_value" translatable="false">10</string>
    <string name="project_creation_overview_hint">Please Check all your input information.</string>
    <string name="function_point_estimation_sample_value" translatable="false">1000</string>
    <string name="nav_header_project_name_hint">Project Name</string>
    <string name="nav_header_user">User: testuser</string>
    <string name="function_point_sum_of_influences">Sum of Influences: </string>
    <string name="function_point_influence_rating">Factor Influence Rating: </string>
    <string name="function_point_change_factor_set_button">Change Factor Set</string>
    <string name="project_creation_estimation_technique_title">Estimation Technique</string>
    <string name="influence_factor_chosen_method_hint">You have chosen METHOD</string>
    <string name="influence_factor_question_text">Which set of influencing factors want you to use?</string>
    <string name="influence_factor_set_button">New Influencing Factor set</string>
    <string name="project_creation_market">For which market will the project be developed?</string>
    <string name="project_creation_development_kind">What kind of development?</string>
    <string name="project_creation_methology">What process methology will be used?</string>
    <string name="project_creation_programming_language">What programming language will be used?</string>
    <string name="project_creation_platform">For what platform will be developed?</string>
    <string name="project_creation_industry_sector">In which industry sector will be the project established?</string>
    <string name="project_creation_project_name">Enter a project Name</string>
    <string name="project_creation_description">Enter a project description</string>
    <string name="project_creation_image_name">ImageName</string>
    <string name="project_creation_change_icon">Change Project Icon</string>
    <string name="estimation_item_name">Reference Data</string>
    <string name="estimation_item_unweighted_points">Unweighted Points:</string>
    <string name="estimation_item_sample_value" translatable="false">10</string>
    <string name="influence_factor_list_item_base_value">Integration into other applications</string>
    <string name="influence_factor_list_item_value" translatable="false">0</string>
    <string name="project_list_creation_name">Item Name:</string>
    <string name="project_list_creation_value">Item Value</string>
    <string name="function_point_estimation_simple">Simple</string>
    <string name="function_point_estimation_medium">Medium</string>
    <string name="function_point_estimation_complex">Complex</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_key_sync_frequency">SYNCFREQUENCY</string>
    <string name="preferences_auto_synch">Automatic Synchronisation</string>
    <string name="pref_key_auto_sync">AUTOSYNCH</string>
    <string name="pref_key_sync_connection_option">SYNCOPTIONS</string>
    <string name="pref_title_sync_connection_option">Connection Options</string>
</resources>